# react-native-litehtml

./: .gitmodules  CONTRIBUTING.md  Litehtml.podspec  README.md  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  android-container.cpp  android-container.h  android-util.h  jni-native-call.cpp  jni-native-call.h  native-lib.cpp
android/src/main/java/com/litehtml/: LitehtmlPackage.kt  LitehtmlView.kt  LitehtmlViewManager.kt
android/src/main/java/com/ollie/litehtml/: BorderUtil.kt  FontInfo.kt  ImageManager.kt  LiteHtmlNativeCall.kt  LitehtmlModule.kt  LitehtmlPackage.kt  LitehtmlRenderer.kt  LitehtmlView.kt  LitehtmlViewManager.kt
android/src/main/java/com/ollie/litehtml/events/: OnAnchorClickEvent.kt  OnImageClickEvent.kt  OnLayoutEvent.kt  OnLoadSVGEvent.kt
android/src/main/jni/: CMakeLists.txt  android-container.cpp  android-container.h  android-util.h  jni-native-call.cpp  jni-native-call.h  native-lib.cpp
cpp/: JSDocumentContainer.cpp  JSDocumentContainer.h  JSLitehtml.cpp  JSLitehtml.h  NativeLitehtmlModule.cpp  NativeLitehtmlModule.h  Utils.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/litehtml/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/LitehtmlExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/LitehtmlExample.xcodeproj/: project.pbxproj
example/ios/LitehtmlExample.xcodeproj/xcshareddata/xcschemes/: LitehtmlExample.xcscheme
example/src/: App.tsx
ios/: Litehtml.h  Litehtml.mm  LitehtmlView.h  LitehtmlView.mm  LitehtmlViewManager.mm
src/: LitehtmlView.tsx  LitehtmlViewNativeComponent.ts  NativeLitehtml.ts  index.tsx  types.ts
